# prism

./: .clang-format  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LINEAGE.md  README.md  build.rs  clippy.toml  dprint.json  flake.nix  justfile  setup.sh
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  identity.yml  install.yml  pages.yml  release.yml
benches/: compile.rs
core/: messageHandler.js  messageHandler.test.js
docs/: book.toml
docs/examples/: adt.pr  anf-example.txt  app_stack.pr  borrow.pr  capabilities.pr  cbpv-grammar.txt  cell-layout.txt  classes.pr  clock.pr  comp.core.txt  comp_desugared.txt  comp_sugar.pr  compose.core.txt  compose.pr  compose_desugared.txt  compose_sugar.pr  comprehension.pr  core-artifacts.tsv  default.core.txt  default_desugared.txt  default_sugar.pr  deriving.core.txt  deriving_desugared.txt  deriving_sugar.pr  destructuring.pr  durable_intro.pr  eff_exn.pr  eff_forward.pr  eff_poly.pr  eff_state.pr  effectful_traverse.pr  effects.pr  errors.pr  exceptions.pr  factorial.pr  failure_stack.pr  fip_list.pr  free-monad.txt  grammar-decls.ebnf  grammar-expr.ebnf  (+96 more)
docs/internal/: HACKING.md  LINEAGE.md
docs/research/: STYLE.md
docs/scripts/: build-site.sh  check-examples.sh  gen-core.sh  gen-lattices.mjs
docs/src/: SUMMARY.md  bibliography.md  compiler.md  intro.md  spec.md
docs/theme/: prism-highlight.js  prism-run.js  prism-tooltips.css  prism-tooltips.js  run.css
examples/: Marshallable.pr  Passable.pr  accum.pr  ad.pr  arena.pr  arena_escape.pr  arena_shared.pr  array.pr  async.pr  async_capability.pr  bignum.pr  bits.pr  boids.pr  builder.pr  bytecode.pr  calc.in  calc.pr  calkin_wilf.pr  capabilities.pr  cbpv.pr  channels.pr  chaos_swarm.pr  chars.pr  class_pattern.pr  classes.pr  cli.pr  clock.pr  collatz.pr  condition.pr  curry.pr  deep_tco.pr  delim.pr  demo.rs  derivative.pr  deriving.pr  diff_after_edit.pr  diff_after_refactor.pr  diff_before.pr  durable.pr  echo.in  (+119 more)
examples/actor_identity/: Vat.pr  main.pr
examples/lineage_tiles/: README.md  config.json  pipeline.pr
examples/spectra-deck/: prism.toml
lib/: prelude.pr
lib/std/: Arena.pr  Blit.pr  Cli.pr  Concurrent.pr  Incr.pr  Json.pr  Math.pr  Netlayer.pr  Quickcheck.pr  Replay.pr  Sequence.pr  Teleport.pr  Test.pr  Time.pr  Wire.pr
models/: CEK.lean  Certificates.lean  Dynamics.lean  Json.lean  Meta.lean  ModelSimp.lean  Oracle.lean  Prism.lean  README.md  Replay.lean  Sanity.lean  diff_against_rust.sh  gen_fixtures.sh  grammar.ebnf  lake-manifest.json  lakefile.toml
models/Tc/: Algorithm.lean  EndToEnd.lean  README.md  Soundness.lean  Syntax.lean
models/fixtures/: abort.json  abort.pr  adt.pr  ask.json  ask.pr  core-hashes.tsv  env.pr  fact.json  fact.pr  fibers.pr  floatari.pr  floatcmp.pr  floatdiv.pr  floatlit.pr  inc.json  inc.pr  ite.json  ite.pr  lambda.pr  letc.pr  logic.pr  mul.json  mul.pr  multishot.json  multishot.pr  nested.pr  pair.pr  statethread.pr  str.pr  tup.json  tup.pr  vec.json  vec.pr  widths.pr
models/semantics/: semantics.typ
packaging/: nfpm.yaml
packaging/arch/: PKGBUILD
packaging/homebrew/: README.md  prism.rb
runtime/: .clang-tidy  prism_arena.c  prism_arena.h  prism_array.c  prism_array.h  prism_buffer.c  prism_buffer.h  prism_effect.c  prism_effect.h  prism_float.c  prism_float.h  prism_int.c  prism_int.h  prism_internal.h  prism_io.c  prism_io.h  prism_kont.c  prism_kont.h  prism_libm.c  prism_libm.h  prism_libm_rename.h  prism_mem.c  prism_mem.h  prism_rt.c  prism_simd.c  prism_simd.h  prism_sort.c  prism_sort.h  prism_string.c  prism_string.h  prism_tbuf.c  prism_tbuf.h
runtime/libm/: README.md  exp_data.h  libm.h  log2_data.h  log_data.h  pow_data.h
scripts/: check-doc-links.py  check-readme-version.py  gate-route.sh  gen-pkgbuild.sh  gen-playground-examples.sh  identity-manifest.sh  install.sh  prism.lua  publish-fury.sh  release-hashes.sh  require-green-ci.sh
src/: binary.rs  coeffect.rs  deprecated.rs  error.rs  fixpoint.rs  flags.rs  fresh.rs  kw.rs  lib.rs  lineage.rs  names.rs  provenance.rs  stable_lock.rs  stdlib.rs  sym.rs  wasm.rs  wired.rs
src/cli/: check_world.rs  docs.rs  exec.rs  fmt.rs  lineage.rs  mod.rs  patch.rs  pkg.rs  render.rs  run.rs  store.rs  test.rs
src/codegen/: abi.rs  dispatch.rs  emit.rs  isa.rs  llvm.rs  mangle.rs  mlir.rs  mod.rs  native_kont.rs  rt.rs
src/core/: block_index.rs  builtins.rs  captures.rs  cbpv.rs  effect_abi.rs  effect_analysis.rs  effect_check.rs  effect_shape.rs  effects.rs  fbip.rs  fv.rs  graph.rs  hash.rs  json.rs  mod.rs  pretty.rs  shape.rs  simd.rs  tailrec.rs  traverse.rs  typed.rs
src/debug/: durable.rs  mod.rs  trace.rs
src/docs/: accept.rs  doctest.rs  extract.rs  mdbook.rs  mod.rs  render.rs  typespans.rs
src/driver/: artifact.rs  backend.rs  build.rs  cache.rs  config.rs  decision.rs  diff.rs  downstream.rs  dump.rs  dump_syntax.rs  dupes.rs  execution.rs  front.rs  identity.rs  input.rs  interface.rs  mod.rs  module_graph.rs  modules.rs  native.rs  query.rs  report.rs  scheduler.rs  semantic_patch.rs  session.rs  stable_lock.rs  timing.rs  verify.rs
tests/: README.md  alloc_certificate.rs  base_surface.rs  boids_branch.rs  boids_scrubber.rs  captures.rs  cert.rs  certificates.rs  chaos_swarm.rs  cli_docs.rs  cli_examples.rs  cli_replay.rs  compiler.rs  contracts.rs  core_hash.rs  decl_order.rs  derive.rs  determinism.rs  determinism_machine.rs  docs_runner.rs  durable_driver.rs  effect_rows.rs  env_knobs.rs  error_codes.rs  expect.rs  float_fmt.rs  float_math_conformance.rs  fmt_break.rs  fmt_deriving.rs  fmt_parens.rs  fmt_records_optics.rs  fmt_trivia.rs  fmt_using.rs  formatter.rs  fuse_parity.rs  gate_cache_identity.rs  grammar_ebnf.rs  hash_parity.rs  incr.rs  isa_fixture.rs  (+60 more)
web/: biome.json  branch.html  chaos.html  gallery.html  incr.html  index.html  merkle.html  package.json  pendulum.html  pnpm-lock.yaml  prism-world.html  repl.html  schedule.html  scrubber.html  teleport-recv.html  teleport.html  tsconfig.json  vite.config.ts
(+1397 files in other folders)
