[package]
name = "prism"
version = "0.12.0"
authors = ["Stephen Diehl <stephen.m.diehl@gmail.com>"]
categories = ["compilers"]
default-run = "prism"
edition = "2021"
keywords = ["compiler", "cbpv", "effects", "llvm", "mlir"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sdiehl/prism"
description = "An effect-typed functional language with a call-by-push-value core that compiles to native code through LLVM."

[dependencies]
anstyle = "1"
ariadne = "0.6"
blake3 = "1"
clap = { version = "4", features = ["derive"], optional = true }
glob = { version = "0.3", optional = true }
im = "15.1"
inkwell = { version = "0.9", features = ["llvm22-1"], optional = true }
lalrpop-util = { version = "0.23", features = ["lexer"] }
lasso = { version = "0.7", default-features = false }
libmimalloc-sys = { version = "0.1", optional = true }
logos = "0.16"
marginalia = "0.2.1"
num-bigint = "0.5.0"
offsides = "0.2"
rustyline = { version = "18.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
serde_stacker = "0.1"
sha2 = "0.11"
stacker = "0.1"
thiserror = "2.0"
toml = { version = "1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

# Unix advisory file locking (`flock`) for the on-disk store index. Only pulled
# for unix targets; the wasm build has no filesystem and uses a no-op fallback.
[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }

# The wasm interpreter cannot FFI into the vendored C libm (no C toolchain in that
# build), so it falls back to the pure-Rust `libm` crate for transcendentals. This
# differs from the vendored copy by about 1 ULP on a few functions: a documented,
# ungated, browser-only boundary (there is no native backend in the browser). On
# native, the interpreter FFIs the vendored `prism_m_*` symbols instead, so this
# dependency is never pulled for a native build.
[target.'cfg(target_arch = "wasm32")'.dependencies]
libm = "0.2.16"

# Runs the playground smoke under node: a `cargo check` compiles the wasm build
# but never executes it, so a default-path host syscall (a store open, a clock
# read) is invisible until the browser runs it. This lets CI run `wasm.rs`'s
# entry point on the wasm target and catch that class before it ships.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
cc = "1"
lalrpop = "0.23"

[dev-dependencies]
blake3 = "1"
# Lean bench harness (no plotting/rayon pull-in): just the measurement engine for
# the compile-time baseline corpus in `benches/compile.rs`.
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
insta = { version = "1.41", features = ["glob"] }
rstest = "0.26.1"

[[bench]]
name = "compile"
harness = false

# `native` (the LLVM backend, the `prism` CLI, and the REPL) is the default.
# `wasm` builds only the interpreter front-end plus a wasm-bindgen entry point:
#   cargo build --target wasm32-unknown-unknown --no-default-features --features wasm
[features]
default = ["native"]
native = ["dep:inkwell", "dep:clap", "dep:rustyline", "dep:glob", "dep:toml"]
mlir = ["native"]
wasm = ["dep:wasm-bindgen"]
# Opt-in: route the native C runtime allocator through mimalloc. The mi_*
# symbols come from the libmimalloc-sys crate (no in-tree source).
mimalloc = ["dep:libmimalloc-sys"]

[lib]
name = "prism"
path = "src/lib.rs"
# Native builds and tests link the rlib; the ~23 MB `cdylib` is only the
# wasm-bindgen output and was dead weight on every native build. The wasm recipe
# (`just wasm`) asks for the cdylib explicitly via `cargo rustc --crate-type
# cdylib`, so it is produced only when building for wasm.
crate-type = ["rlib"]

[[bin]]
name = "prism"
path = "bin/prism.rs"
required-features = ["native"]

[[example]]
name = "demo"
path = "examples/demo.rs"

[lints.rust]
# `deny` rather than `forbid` so audited exception sites can opt in with
# `#[allow(unsafe_code)]`: the LLVM `getelementptr` builder in inkwell is `unsafe`,
# and the interpreter calls the vendored native libm through FFI. Every `unsafe`
# block must carry a SAFETY comment.
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Faster incremental builds and links for the dev/test loop: line-number-only
# debuginfo (backtraces keep file:line, only debugger variable inspection is
# lost) and unpacked debuginfo (no .dSYM bundling step on macOS). Release builds,
# which the gate and shipped binaries use, are unaffected.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

# `cargo release <version>` bumps the manifest, stamps the changelog, tags
# v<version>, and pushes; the Release workflow builds and publishes from the tag.
# Not published to crates.io (the crate links system LLVM), so `cargo install`
# builds from git instead.
[package.metadata.release]
publish = false
tag-name = "v{{version}}"
sign-tag = false
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "## Unreleased", replace = "## {{version}}", exactly = 1 },
]
